Update plan for the next episodes

--- a/episodes/ep-10.md
+++ b/episodes/ep-10.md
@@ -1,5 +1,8 @@
 # ...
 
-> AVA — Jak obliczyć pokrycie kodu? — Odc. 10
+> AVA — Code Coverage — Odc. 10
 
+W odcinku:
+
+* Jak obliczyć pokrycie kodu?
 * Wykorzystanie paczki "c8" jako wsparcie do Code Coverage
