--- a/episodes/ep-11.md
+++ b/episodes/ep-11.md
@@ -1,6 +1,8 @@
 # ...
 
-> AVA — Odc. 11
+> AVA — TypeScript — Odc. 11
+
+W odcinku:
 
 * Przepisanie na TypeScript
   + https://github.com/avajs/ava/blob/master/docs/recipes/typescript.md
