--- a/episodes/ep-13.md
+++ b/episodes/ep-13.md
@@ -1,6 +1,8 @@
 # ...
 
-> AVA — Odc. 13
+> AVA — Integracja z TestDouble.js — Odc. 13
+
+W odcinku:
 
 * Integracja z narzędziem:
   https://github.com/testdouble/testdouble.js
