--- a/episodes/ep-10.md
+++ b/episodes/ep-10.md
@@ -4,5 +4,5 @@
 
 W odcinku:
 
-* Jak obliczyć pokrycie kodu?
-* Wykorzystanie paczki "c8" jako wsparcie do Code Coverage
+- Jak obliczyć pokrycie kodu?
+- Wykorzystanie paczki "c8" jako wsparcie do Code Coverage
