--- a/episodes/ep-11.md
+++ b/episodes/ep-11.md
@@ -4,6 +4,6 @@
 
 W odcinku:
 
-* Przepisanie na TypeScript
-  + https://github.com/avajs/ava/blob/master/docs/recipes/typescript.md
-  + https://github.com/avajs/typescript
+- Przepisanie na TypeScript
+  - https://github.com/avajs/ava/blob/master/docs/recipes/typescript.md
+  - https://github.com/avajs/typescript
