--- a/episodes/ep-12.md
+++ b/episodes/ep-12.md
@@ -4,7 +4,7 @@
 
 W odcinku:
 
-* Integracja z VSC
-  + Debugowanie
-* Integracja z WebStormem
-  + Debugowanie
+- Integracja z VSC
+  - Debugowanie
+- Integracja z WebStormem
+  - Debugowanie
